Simple and naive lifting completed