@@ -7,7 +7,6 @@ import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.List;
-import java.util.stream.Collectors;
 import me.simonegazza.antlr.minizinc.MiniZincLexer;
 import me.simonegazza.antlr.minizinc.MiniZincParser;
 import org.antlr.v4.runtime.CharStream;
@@ -18,39 +17,42 @@ import org.antlr.v4.runtime.tree.ParseTree;
 import org.junit.jupiter.api.Test;
 
 class CorrectGrammar {
-    private final Path resourcesFolder = Paths.get("resources");
+	private final Path resourcesFolder = Paths.get("resources");
 
-    private String parse(String model) throws IOException {
-        CharStream input = CharStreams.fromString(model);
+	private String parse(String model) throws IOException {
+		CharStream input = CharStreams.fromString(model);
 
-        Lexer lexer = new MiniZincLexer(input);
-        CommonTokenStream tokens = new CommonTokenStream(lexer);
-        MiniZincParser parser = new MiniZincParser(tokens);
+		Lexer lexer = new MiniZincLexer(input);
+		CommonTokenStream tokens = new CommonTokenStream(lexer);
+		MiniZincParser parser = new MiniZincParser(tokens);
 
-        ParseTree tree = parser.model();
+		ParseTree tree = parser.model();
 
-        PrintingVisitor visitor = new PrintingVisitor(tokens);
+		PrintingVisitor visitor = new PrintingVisitor(tokens);
 
-        return visitor.visit(tree);
-    }
+		return visitor.visit(tree);
+	}
 
-    @Test
-    void correctGrammarTest() throws IOException {
-        List<Path> directories = Files.list(resourcesFolder).filter(Files::isDirectory).collect(Collectors.toList());
+	@Test
+	void correctGrammarTest() throws IOException {
+		List<Path> directories = Files.list(resourcesFolder)
+			.filter(Files::isDirectory)
+			.toList();
 
-        for (Path dir : directories) {
-            List<Path> files = Files.list(dir).filter(Files::isRegularFile)
-                    .filter(p -> p.toString().endsWith(".mzn") || p.toString().endsWith(".dzn"))
-                    .collect(Collectors.toList());
+		for (Path dir : directories) {
+			List<Path> files = Files.list(dir)
+				.filter(Files::isRegularFile)
+				.filter(p -> p.toString().endsWith(".mzn") || p.toString().endsWith(".dzn"))
+				.toList();
 
-            StringBuilder sb = new StringBuilder();
+			StringBuilder sb = new StringBuilder();
 
-            for (Path file : files)
-                sb.append(Files.readString(file) + "\n");
+			for (Path file : files)
+				sb.append(Files.readString(file) + "\n");
 
-            String model = sb.toString();
-            assertEquals(parse(model), model);
-        }
+			String model = sb.toString();
+			assertEquals(parse(model), model);
+		}
 
-    }
+	}
 }
